--- a/books.css
+++ b/books.css
@@ -42,12 +42,18 @@ body{
     font-weight: 400;
 }
 
+.container .nav h2 a{
+    text-decoration: none;
+    color: #fff;
+    cursor: pointer;
+}
 
 .container .nav .nav-bar li{
     list-style: none;
     display: inline-block;
     margin-right:15px ;
 }
+
 .container .nav .nav-bar li a{
     text-decoration: none;
     color: #fff;
@@ -115,7 +121,6 @@ body{
     font-weight: 500;
     text-align: center;
     margin-bottom: 20px;
-    margin-bottom: 10px;
 }
 
 .book-inner-container{
