--- a/index.css
+++ b/index.css
@@ -40,6 +40,12 @@ body{
     padding: 10px 0;
 }
 
+.container .nav h2 a{
+    text-decoration: none;
+    color: #fff;
+    cursor: pointer;
+}
+
 .container .nav h2 span{
     color: black;
     font-size: 25px;
@@ -52,6 +58,7 @@ body{
     display: inline-block;
     margin-right:15px ;
 }
+
 .container .nav .nav-bar li a{
     text-decoration: none;
     color: #fff;
@@ -66,7 +73,7 @@ body{
     font-size: 17px;
     font-weight: 400;
     background-color: #fff;
-    padding: 5px;
+    padding: 3px 5px;
     border-radius: 10px;
     transition: 0.5s;
     cursor: pointer;
@@ -77,11 +84,12 @@ body{
     background-color: #E94E7A;
     padding: 5px;
     border: 2px solid white;
+    box-shadow: 5px 5px 5px 0px rgba(20, 20, 20, 0.5);
 }
 
 .blog-button:hover{
     border-radius: 10px 0;
-    background-color: #fff;
+    background-color: #d60b45;
     padding: 5px;
     border: 2px solid #fff;
     transition: 0.2s;
@@ -94,16 +102,6 @@ body{
     color: white;
     font-size: 17px;
     font-weight: 400;
-
-}
-
-.blog-button a:hover{
-    text-decoration: none;
-    cursor: pointer;
-    color: #E94E7A;
-    font-size: 17px;
-    font-weight: 400;
-    transition: 0.2s;
 
 }
 
@@ -154,7 +152,6 @@ body{
     max-width: 80%;
     height: auto;
     display: flex;
-
 }
 
 .book-heading{
