--- a/landingPage.css
+++ b/landingPage.css
@@ -2,48 +2,57 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
 .container{
     box-sizing: border-box;
     width: 100%;
     height: 100vh;
-    background: url(IMG-20230308-WA0014-removebg-preview2.png);
-    background-repeat: none;
-    background-size: cover;
-    background-position-y: -470px;
-    background-position-x: 400px;
+    background-color: #fff;
+    border: 40px solid #E94E7A;
     overflow: hidden;
 }
 
-innerContainer{
+.innerContainer{
     width: 100%;
     height: auto;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+}
+
+.text{
+    margin-left: 200px;
+    align-items: center;
     justify-content: center;
 }
 
+img{
+    width: 600px;
+    height: auto;
+    margin-right: 200px;
+    margin-top: 40px;
+    position: relative;
+}
+
 h2{
-    color: rgb(236, 233, 229);
-    font-size: 65px;
-    font-weight: 600;
-    margin-top: 200px;
-    margin-bottom: 50px;
-    margin-left: 100px;
+    color: #d60b45;
+    font-size: 70px;
+    font-weight: 500;
 }
 
 button{
-    background-color: rgb(228, 133, 89);
+    background-color: #E94E7A;
     border: 0;
     border-radius: 10px 0;
-    padding: 10px;
-    margin-left: 300px;
-    margin-bottom: 70px;
+    padding: 20px;
+    margin-bottom: 5px;
 }
 
 button:hover{
-    background-color: #fff;
+    background-color: #d60b45;
     transition: 0.2s;
     cursor: pointer;
 }
@@ -53,24 +62,4 @@ button a{
     color: #ffffff; 
     font-size: 30px;
     font-weight: 600;    
-}
-
-button a:hover{
-    color: rgb(228, 133, 89);
-    transition: 0.2s;
-    cursor: pointer;
-}
-
-.social-links{
-    width: 100%;
-    height: auto;
-    margin-left: 220px;
-}
-
-.social-links a{
-    margin-right: 30px;
-}
-
-.social-links a img{
-    width: 35px;
 }
