--- a/about.css
+++ b/about.css
@@ -83,11 +83,12 @@ body{
     background-color: #E94E7A;
     padding: 5px;
     border: 2px solid white;
+    box-shadow: 5px 5px 5px 0px rgba(20, 20, 20, 0.5);
 }
 
 .blog-button:hover{
     border-radius: 10px 0;
-    background-color: #fff;
+    background-color: #d60b45;
     padding: 5px;
     border: 2px solid #fff;
     transition: 0.2s;
@@ -100,16 +101,6 @@ body{
     color: white;
     font-size: 17px;
     font-weight: 400;
-
-}
-
-.blog-button a:hover{
-    text-decoration: none;
-    cursor: pointer;
-    color: #E94E7A;
-    font-size: 17px;
-    font-weight: 400;
-    transition: 0.2s;
 
 }
 
