--- a/books.css
+++ b/books.css
@@ -104,7 +104,7 @@ body{
     width: 100%;
     height: auto;
     background-color: #E4E4F0;
-    padding: 70px;
+    padding: 20px 10px 5px 50px;
 }
 
 .books-container h2{
