--- a/index.css
+++ b/index.css
@@ -105,36 +105,73 @@ body{
 
 }
 
+.section-container{
+    position: relative;
+    padding: 50px 50px;
+    
+}
+
+.section-container-2{
+    position: relative;
+}
+
 .about-author{
-    margin: 50px 100px;
-    display: flex;
+    margin: 0;
     justify-content: center;
     align-items: center;
 }
 
+
 .about-author img{
-    width: 450px;
-    margin-right: 50px;
+    float: left;
+    width: 300px;
+    margin-right: 30px;
     align-items: center;
 }
 
-.about-author .text{
+
+/*
+.about-author{
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    width: 100%;
+    /*
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 900px));
+    column-gap: 10px;
+    row-gap: 10px;*/
+}
+
+.about-author img{
+    width: 300px;
+    height: 300px;
+    float: left;
+    /*
+    object-fit: cover;
+    object-position: center;*/
+    align-items: center;
+}
+
+.about-author{
     line-height: 25px;
 }
 
-.about-author .text p{
+.about-author p{
     font-size: 20px;
     font-weight: 300;
     text-align: justify;
 }
 
-.about-author .text .name{
+.about-author .name{
     font-size: 30px;
     font-weight: 500;
     text-align: right;
     margin-top: 20px;
     color: #E94E7A;
 }
+
 
 .books-container{
     width: 100%;
@@ -148,12 +185,22 @@ body{
     padding-left: 8%;
 }
 
+/*
 .book-main-container{
     max-width: 80%;
     height: auto;
     display: flex;
-}
+}*/
 
+/*.books{
+    width: 600px;
+    margin: 20px;
+    padding: 5px;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+}
+*/
 .book-heading{
     font-size: 35px;
     font-weight: 500;
@@ -162,26 +209,35 @@ body{
     color: #d60b45;
 }
 
-.books{
-    width: 600px;
-    margin-right: 30px;
-    padding: 5px;
+.book-main-container{
+    position: relative;
+    justify-content: center;
     align-items: center;
-    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+    margin-top: 10px;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 300px));
+    column-gap: 20px;
+    row-gap: 20px;
 }
 
 .books img{
-    width: 350px;
+    width: 300px;
+    height: 400px;
+    object-fit: cover;
+    object-position: center;
+
+    /*width: 350px;
     height: 400px;
     align-items: center;
-    justify-content: center;
+    justify-content: center;*/
 }
 
 .books p{
-    width: 350px;
+    width: 250px;
     font-size: 20px;
     font-weight: 300;
-    text-align: justify;
+    text-align: center;
 }
 
 .explore-more{
