--- a/index.css
+++ b/index.css
@@ -173,7 +173,7 @@ body{
 }
 
 
-.books-container{
+.section-container-2 .books-container{
     width: 100%;
     height: auto;
     align-items: center;
@@ -182,7 +182,6 @@ body{
     padding-top: 1%;
     padding-bottom: 1%;
     align-items: center;
-    padding-left: 8%;
 }
 
 /*
@@ -192,21 +191,22 @@ body{
     display: flex;
 }*/
 
-/*.books{
-    width: 600px;
-    margin: 20px;
-    padding: 5px;
+.section-container-2 .books-container .book-main-container .books{
+    width: 320px;
+    margin: 15px;
+    padding: 10px;
     align-items: center;
     justify-content: center;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
-*/
-.book-heading{
-    font-size: 35px;
+
+
+.section-container-2 .books-container .book-heading{
+    font-size: 25px;
     font-weight: 500;
     margin: 20px;
-    margin-left: 500px;
     color: #d60b45;
+    text-align: center;
 }
 
 .book-main-container{
@@ -216,8 +216,8 @@ body{
     margin-top: 10px;
     width: 100vw;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 300px));
-    column-gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 350px));
+    column-gap: 20px
     row-gap: 20px;
 }
 
@@ -245,9 +245,10 @@ body{
     border: none;
     padding: 12px;
     border-radius: 15px 0 15px 15px;
-    margin-left: 450px;
     margin-top: 30px;
     margin-bottom: 20px;
+    align-items: center;
+    justify-content: center;
 }
 
 .explore-more a{
@@ -269,8 +270,8 @@ body{
 }
 
 .latest-news{
-    margin: 20px 20px;
-    padding: 50px;
+    margin: 10px 10px;
+    padding: 20px;
     background-color: #fff;
     align-items: center;
     justify-content: center;
@@ -285,21 +286,28 @@ body{
 }
 
 .news-container{
-    width: 80%;
+    width: 100vw;
     height: auto;
-    display: flex;
-    padding-left: 20px;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 400px));
+    column-gap: 20px;
+    row-gap: 20px;
+    
 }
 
 .text-container{
-    margin-right: 50px;
+    margin-right: 20px;
     background-color: #E94E7A;
     padding: 30px;
     margin-bottom: 20px;
 }
 
 .text-container:hover{
-    margin-right: 50px;
+    margin-right: 20px;
     background-color: #d60b45;
     padding: 30px;
     margin-bottom: 20px;
